@@ -7,6 +7,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.servlet.NoHandlerFoundException;
 
 import java.util.Collections;
 import java.util.List;
@@ -36,15 +37,28 @@ public class GlobalExceptionHandler {
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<ApiError> handleGeneralException(Exception ex) {
+        if (ex instanceof NoHandlerFoundException) {
+            ApiError error = new ApiError(
+                    HttpStatus.NOT_FOUND.value(),
+                    Collections.singletonList(AppErrorCode.RESOURCE_NOT_FOUND.getCode()), // Código de error personalizado
+                    Collections.singletonList(AppErrorCode.RESOURCE_NOT_FOUND.getExplicationCode()),
+                    "handleGeneralException",
+                    Collections.emptyList()
+            );
+            return new ResponseEntity<>(error, HttpStatus.NOT_FOUND);
+        }
+
+        // Manejo general de otras excepciones
         ApiError error = new ApiError(
                 HttpStatus.INTERNAL_SERVER_ERROR.value(),
                 Collections.singletonList(AppErrorCode.UNEXPECTED_ERROR.getCode()),
-                List.of("An unexpected error occurred: " + ex.getMessage()),
+                Collections.singletonList(AppErrorCode.UNEXPECTED_ERROR.getExplicationCode()),
                 "unknown",
-                Collections.emptyList()
+                Collections.singletonList(ex.getMessage())
         );
         return new ResponseEntity<>(error, HttpStatus.INTERNAL_SERVER_ERROR);
     }
+
 
     private List<String> generateMessage(List<AppErrorCode> errorCodes, Function<AppErrorCode, String> function) {
         return errorCodes.stream()
